# disktriage-tr

./: .gitignore  README.md  build.py  dashboard.py  disktriage.py  main.py  pyproject.toml  requirements.txt
disktriage/: __init__.py  cli.py
disktriage/modules/: __init__.py  anonymizer.py  browser_history.py  console_output.py  evtx.py  html_report.py  io.py  logging_utils.py  models.py  persistence.py  prefetch.py  processing.py  report_generator.py  reporting.py  timeline.py  userassist.py  utils.py  virustotal.py
tests/: __init__.py  test_cli.py  test_modules.py
